[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Tehseen Afzal <abuashja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
ngrok = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
